2022-08-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge parser branch to trunk.

2022-08-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  device/include/stddef.h,
	  support/regression/tests/c2xkeywords.c,
	  support/regression/tests/typeof.c:
	  Basic C2X typeof and typeof_unqual support.

2022-08-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/SDCCval.h:
	  Basic C2X nullptr support.

2022-08-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Simplify grammar rules for enum.

2022-07-29 Felix Salfelder <felix AT salfelder.org>

	* src/SDCC.y:
	  Remove obsolete __func__ magic handling from parser.

2022-07-26 Felix Salfelder <felix AT salfelder.org>

	* device/lib/Makefile.in, device/lib/*/Makefile.in,
	  device/lib/incl.mk:
	  Deduplicate CC, introduce SDAR, add Makefile rules,
	  fix error propagation.

2022-07-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/ds400/ds400rom.c:
	  Fix use of macro for #.

2022-07-22 Felix Salfelder <felix AT salfelder.org>

	* src/SDCC.lex:
	  Skip "line" in lineinfo line. This fixes [r13587].

2022-07-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-3401.c:
	  Fix bug #3401.

2022-07-22 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/c-ppoutput.c:
	  Add "line" to lineinfo lines, following the standard.

2022-07-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglue.c,
	  support/regression/tests/bug-3461.c:
	  Fix third and last part of bug #3461.

2022-07-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/ds390/gen.c,
	  src/hc08/gen.c,