@@ -91,7 +91,7 @@ inline void *aligned_alloc(size_t alignment, size_t size)
 #endif
 extern void free (void * ptr);
 
-#if __STDC_VERSION__ >= 202300L
+#if __STDC_VERSION__ >= 202300L // TODO: Replace by final value when C2X is published!
 inline void free_sized(void *ptr, size_t size)
 {
   (void)size;
@@ -150,6 +150,11 @@ int wctomb(char *s, wchar_t wc);
 #if __STDC_VERSION__ >= 199901L
 size_t mbstowcs(wchar_t *restrict pwcs, const char *restrict s, size_t n);
 size_t wcstombs(char *restrict s, const wchar_t *restrict pwcs, size_t n);
+#endif
+
+/* C2X Alignment of memory */
+#if __STDC_VERSION__ >= 202300L // TODO: Replace by final value when C2X is published!
+size_t memalignment(const void *p);
 #endif
 
 /* Bounds-checking interfaces from annex K of the C11 standard. */
